<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:id="@+id/texto"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colortitulo"
        android:textSize="40dp"
        android:typeface="serif"
        android:background="@color/verdeoscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_usuario"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texto" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <RadioGroup
        android:id="@+id/eleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <RadioButton
            android:id="@+id/buttonciud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/como_ciudadano"
            android:textSize="15dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="true"
            android:onClick="onClick"/>

        <RadioButton
            android:id="@+id/buttonagente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/como_agente"
            android:textSize="15dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onClick"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eleccion"
        app:layout_constraintVertical_bias="0.2">

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/fondoverdeclaro"
            android:text="@string/iniciar_sesion"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:onClick="peticion_REST"/>

        <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/fondoverdeclaro"
            android:text="@string/registrarse"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="375dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/verdeoscuro"
        android:text="@string/derechos"
        android:textColor="@color/colortitulo"
        android:textColorLink="@color/colorenlace"
        android:autoLink="web"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/texto"
        app:layout_constraintStart_toStartOf="@+id/texto"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>