<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/textoreg"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/registrarsetitulo"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:textColor="@color/colortitulo"
        android:textSize="40dp"
        android:typeface="serif"
        android:background="@color/verdeoscuro"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/buttonciud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/como_ciudadano"
            android:textSize="15dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="true"
            android:onClick="onClick"/>

        <RadioButton
            android:id="@+id/buttonagente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/como_agente"
            android:textSize="15dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:onClick="onClick"/>

    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorhuevo"/>

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Nombre completo"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorhuevo"/>

                <EditText
                    android:id="@+id/usuario"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Usuario (8 letras)"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorhuevo"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="DNI"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layouttarjsanitaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorhuevo"/>

                <EditText
                    android:id="@+id/tarjsanitaria"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Número de la tarjeta sanitaria"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layouttelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorhuevo"/>

                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Teléfono"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layouthospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textColor="@color/colorhuevo"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hospital"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Hospital"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutdepart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textColor="@color/colorhuevo"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/departamento"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Departamento"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutcod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="¤"
                    android:textColor="@color/colorhuevo"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/codigo"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="Código"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/register"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="45dp"
                    android:background="@drawable/fondoverdeclaro"
                    android:text="@string/registrarse"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:onClick="register" />

                <Button
                    android:id="@+id/atras"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/fondoverdeclaro"
                    android:text="@string/atras"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>